# UnitTestExample

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
inc/: Calc.hpp  Display.h  ILogger.hpp  Logger.hpp  Sensor.h  calc.hpp  display.h  sensorinterface.h
src/: Calc.cpp  Display.cpp  Logger.cpp  Sensor.cpp  calc.cpp  display.cpp
tests/: test_calc.cpp  test_calc_advanced.cpp
unittests/: TestCalc.cpp  display_test.cpp
unittests/mock/: MockLogger.hpp
